test/example/base-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-ingress
  namespace: ingress-apisix
spec:
  ingressClassName: apisix
  rules:
    - host: baseroute.com
      http:
        paths:
          - path: /ip
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port: 
                  number: 80
