test/example/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: ingress-apisix
spec:
  ingressClassName: apisix
  rules:
    - host: local.httpbin.org
      http:
        paths:
          - path: /ip
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port: 
                  number: 80
