test/example/https-route.yaml
apiVersion: apisix.apache.org/v2
kind: ApisixRoute
metadata:
  name: https-route
  namespace: ingress-apisix
spec:
  http:
  - name: httpsroute
    match:
      hosts:
      - local.httpbin.org
      paths:
      - /ip
    backends:
      - serviceName: httpbin
        servicePort: 80
