test/example/security-cors-route.yaml
apiVersion: apisix.apache.org/v2
kind: ApisixRoute
metadata:
  name: security-cors-route
  namespace: ingress-apisix
spec:
  http:
  - name: security-cors
    match:
      hosts:
      - security.cors.com
      paths:
      - /openid-configuration
    backends:
      - serviceName: nginx
        servicePort: 80
    plugin_config_name: security-cors
