test/example/traffic-count-route.yaml
apiVersion: apisix.apache.org/v2
kind: ApisixRoute
metadata:
  name: traffic-count-route
  namespace: ingress-apisix
spec:
  http:
  - name: traffic-count
    match:
      hosts:
      - traffic.count.com
      paths:
      - /*
    backends:
      - serviceName: httpbin
        servicePort: 80
    plugin_config_name: traffic-count
