test/example/traffic-req-route.yaml
apiVersion: apisix.apache.org/v2
kind: ApisixRoute
metadata:
  name: traffic-req-route
  namespace: ingress-apisix
spec:
  http:
  - name: traffic-req
    match:
      hosts:
      - traffic.req.com
      paths:
      - /*
    backends:
      - serviceName: httpbin
        servicePort: 80
    plugin_config_name: traffic-req
